.md-fab icon align fix.

--- a/src/app/core/global-scss/partials/angular-material-extend.scss
+++ b/src/app/core/global-scss/partials/angular-material-extend.scss
@@ -28,6 +28,11 @@ md-backdrop {
         line-height: 40px;
         width: 40px;
     }
+
+    // Fab
+    &.md-fab {
+        line-height: 1;
+    }
 }
 
 // Dialog
